# VADAS

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
backend/: main.py
backend/checkpoints/: unet_drivable_best.pth  yolo_idd_best.pt
backend/configs/: classes.py  yolo_idd.yaml
backend/data/: idd_classes.py  prepare_seg_masks.py  prepare_yolo_labels.py  verify_dataset.py
backend/inference/: annotator.py  camera.py  pipeline.py
backend/models/: decision_engine.py  detector.py  segmentor.py  trajectory.py
backend/training/: evaluate.py  kaggle_unet_training.py  kaggle_yolo_training.py  train_unet.py  train_yolo.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ActionDisplay.jsx  DetectionList.jsx  LiveView.jsx  StatusBar.jsx  VideoUploader.jsx
frontend/src/hooks/: usePolling.js
